Update BUConfig.java